2015-11-09  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/texi2any.pl: Add 'use Texinfo::Convert::Converter' as this 
	module may not be loaded.

2015-11-09  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/XSParagraph/XSParagraph.xs,
	* tp/Texinfo/Convert/XSParagraph/TestXS.xs: Add "PROTOTYPES: ENABLE"
	line to get rid of a warning.

2015-11-08  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/XSParagraph/XSParagraph.xs,
	* tp/Texinfo/Convert/XSParagraph/text.c,
	* tp/Texinfo/Convert/XSParagraph/xspara.c: Add copyright and 
	licence text.

2015-11-07  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/t/paragraph.t: Access paragraph formatting modules via a 
	string with the name of the module in it.  Aliasing a module's 
	namespace to switch between modules doesn't seem to work 
	reliably.

2015-11-07  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/XSParagraph/TestXS.pm: Always print 
	debugging output, and remove fallback code copied from 
	XSParagraph.pm.

2015-11-07  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Makefile.am (test_files): Add east_asian_in_w.texi.
	* tp/t/README: Mention listing test input files in Makefile.am.  
	Mention another way of running a single test.

2015-11-07  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/XSParagraph/Makefile.am (EXTRA_DIST): Add 
	fail.pl.

2015-11-07  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/XSParagraph/TestXS.pm: Change package name.
	Remove comments copied from XSParagraph.pm.  Remove unused 
	functions, also copied here.  Rename $VERSION variable to avoid 
	it being altered by maintenence scripts.

2015-11-07  Gavin Smith  <gavinsmith0123@gmail.com>

	* install-info/install-info.c (format_entry): Add comment for 
	local variable, and goto label.

2015-11-07  Gavin Smith  <gavinsmith0123@gmail.com>

	* install-info/install-info.c (format_entry): Use a local 
	variable to avoid dereferences of output variable.
