@@ -1,5 +1,10 @@
 2015-11-09  Gavin Smith  <gavinsmith0123@gmail.com>
 
+	* tp/texi2any.pl: Use srcdir as well as builddir to set module 
+	search path.
+
+2015-11-09  Gavin Smith  <gavinsmith0123@gmail.com>
+
 	* tp/texi2any.pl: Add 'use Texinfo::Convert::Converter' as this 
 	module may not be loaded.
 
